--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,5 +44,8 @@
     <color name="offer_grid_2">#C18D0F</color>
     <color name="trans_black">#55000000</color>
     <color name="gray1_trans">#ddf5f5f5</color>
-<color name="icline">#f6c712</color>
+    <color name="icline">#f6c712</color>
+    <color name="primary_trans">#552FBFE0</color>
+    <color name="color_gray_trans">#55e0e0e0</color>
+
 </resources>
