--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,16 @@
         <item name="android:windowEnterAnimation">@anim/dialog_congratulation_enter</item>
         <item name="android:windowExitAnimation">@anim/dialog_congratulation_exit</item>
     </style>
+
+    <style name="custom_horizontal_progress_bar_left" parent="Widget.AppCompat.ProgressBar.Horizontal"
+        >
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/custom_horizontal_progress_bar_left</item>
+    </style>
+
+    <style name="custom_horizontal_progress_bar_right" parent="Widget.AppCompat.ProgressBar.Horizontal"
+        >
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/custom_horizontal_progress_bar_right</item>
+    </style>
 </resources>
