--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".uis.activity_choose_order_type.ChooseOrderTypeActivity"
-        android:background="@color/white"
+        android:background="@color/gray0"
         >
 
         <androidx.appcompat.widget.Toolbar
@@ -38,45 +38,68 @@
             app:contentInsetRight="0dp"
             >
             <LinearLayout
-                android:id="@+id/llBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 >
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_left_arrow"
-                    app:tint="@color/white"
-                    android:padding="8dp"
-                    android:clickable="false"
-                    android:longClickable="false"
-                    android:rotation='@{lang.equals("ar")?180:0}'
-                    />
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/image"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    app:civ_border_width="0dp"
-                    app:civ_circle_background_color="@color/gray3"
-                    android:src="@drawable/ic_avatar"
-                    user_image="@{model.image}"
-                    />
-                <TextView
-                    android:id="@+id/tvName"
+                <LinearLayout
+                    android:id="@+id/llBack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:textColor="@color/white"
-                    android:clickable="false"
-                    android:longClickable="false"
-                    android:textSize="16sp"
-                    android:maxEms="6"
-                    android:singleLine="true"
-                    android:text="@{model.name}"
+                    >
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/ic_left_arrow"
+                        app:tint="@color/white"
+                        android:padding="8dp"
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:rotation='@{lang.equals("ar")?180:0}'
+                        />
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/image"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        app:civ_border_width="0dp"
+                        app:civ_circle_background_color="@color/gray3"
+                        android:src="@drawable/ic_avatar"
+                        user_image="@{model.image}"
+                        />
+                    <TextView
+                        android:id="@+id/tvName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:textColor="@color/white"
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:textSize="16sp"
+                        android:maxEms="6"
+                        android:singleLine="true"
+                        android:text="@{model.name}"
+                        />
+
+                </LinearLayout>
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="0dp"/>
+                <ImageView
+                    android:id="@+id/imageMap"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/ic_pin3"
+                    app:tint="@color/white"
                     />
+
             </LinearLayout>
 
         </androidx.appcompat.widget.Toolbar>
@@ -112,7 +135,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/imageSend"
-            app:cardElevation="2dp"
+            app:cardElevation="3dp"
             app:cardCornerRadius="20dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
