--- a/app/src/main/res/layout/activity_profile_products.xml
+++ b/app/src/main/res/layout/activity_profile_products.xml
@@ -35,7 +35,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:titleEnabled="false"
-                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
 
                     >
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -61,8 +61,8 @@
                             app:layout_constraintTop_toBottomOf="@id/view"
                             app:layout_constraintBottom_toBottomOf="@id/view"
                             app:layout_constraintStart_toStartOf="parent"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginEnd="20dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
                             android:src="@drawable/ic_avatar"
                             user_image="@{model.logo}"
 
@@ -102,7 +102,7 @@
                             android:singleLine="true"
                             android:ellipsize="end"
                             android:textColor="@color/black"
-                            android:textSize="16sp"
+                            android:textSize="14sp"
                             android:textStyle="bold"
                             android:text='@{model.phone_code+model.phone}'
                             />
@@ -179,6 +179,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:background="@color/gray0"
+                        app:layout_collapseMode="pin"
 
                         >
                         <LinearLayout
