--- a/app/src/main/res/layout/chat_location_left.xml
+++ b/app/src/main/res/layout/chat_location_left.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     >
 
@@ -10,80 +10,121 @@
         <variable
             name="model"
             type="com.fardiat.models.MessageModel" />
+
+        <import type="android.view.View" />
+
     </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layoutDirection="rtl"
-        tools:ignore="UnusedAttribute">
+        android:layoutDirection="ltr"
+        tools:ignore="UnusedAttribute"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        >
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_alignParentEnd="true"
-            tools:ignore="RtlCompat"
-
-
             >
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cons"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layoutDirection="rtl"
+                android:layoutDirection="ltr"
                 android:orientation="horizontal"
-                android:background="@drawable/small_rounded_gray"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="RtlCompat,UnusedAttribute">
 
+
+
+                <LinearLayout
+                    android:layout_width="234dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/msg_left_image_bg"
+                    android:orientation="vertical"
+                    >
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+
+
+                        >
+
+
+                        <com.makeramen.roundedimageview.RoundedImageView
+                            android:id="@+id/imageChat"
+                            android:layout_width="220dp"
+                            android:layout_height="250dp"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginEnd="12dp"
+                            android:layout_marginBottom="2dp"
+                            app:riv_border_color="@color/transparent"
+                            app:riv_border_width="0dp"
+                            app:riv_corner_radius="5dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/map"
+
+
+                            />
+
+                        <TextView
+                            android:id="@+id/tv_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end|bottom"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:textColor="@color/gray2"
+                            android:textSize="12sp" />
+
+
+                    </FrameLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 >
-
-                <ImageView
-                    android:id="@+id/imageLocation"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:src="@drawable/map"
-                    android:layout_margin="1dp"
-
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="0dp"/>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center_vertical"
+                    app:civ_circle_background_color="@color/gray2"
+                    android:src="@drawable/image_avatar"
 
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/imageLocation"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    android:maxWidth="230dp"
-                    android:text="@{model.message}"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:textColor="@color/gray11"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:text="@{model.from_user.name}"
 
                     />
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/tvMessageDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray6"
-                android:textSize="10sp"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                tools:ignore="SmallSp"
-                app:layout_constraintTop_toBottomOf="@id/cons"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </RelativeLayout>
 </layout>
