--- a/app/src/main/res/layout/chat_location_right.xml
+++ b/app/src/main/res/layout/chat_location_right.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     >
 
     <data>
 
-        <variable
-            name="model"
-            type="com.fardiat.models.MessageModel" />
+
+        <import type="android.view.View" />
+
     </data>
 
     <RelativeLayout
@@ -19,68 +19,59 @@
         android:layoutDirection="ltr"
         tools:ignore="UnusedAttribute">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_alignParentEnd="true"
-            tools:ignore="RtlCompat"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layoutDirection="ltr"
+            android:orientation="horizontal"
+            tools:ignore="RtlCompat">
 
-
-            >
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cons"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="234dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layoutDirection="ltr"
-                android:orientation="horizontal"
-                android:background="@drawable/small_rounded_primary"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/msg_right_image_bg"
+
+
 
                 >
 
-                <ImageView
-                    android:id="@+id/imageLocation"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/image"
+                    android:layout_width="220dp"
+                    android:layout_height="250dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginBottom="2dp"
+                    app:riv_border_color="@color/transparent"
+                    app:riv_border_width="0dp"
+                    app:riv_corner_radius="5dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/map"
-                    android:layout_margin="1dp"
-
                     />
+
                 <TextView
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/imageLocation"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginBottom="5dp"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
-                    android:maxWidth="230dp"
-                    android:text="@{model.message}"
+                    android:textSize="12sp"
 
                     />
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/tvMessageDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray6"
-                android:textSize="10sp"
-                android:layout_marginTop="5dp"
-                tools:ignore="SmallSp"
-                app:layout_constraintTop_toBottomOf="@id/cons"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </FrameLayout>
+        </LinearLayout>
     </RelativeLayout>
 </layout>
