--- a/app/src/main/res/layout/activity_add_ads.xml
+++ b/app/src/main/res/layout/activity_add_ads.xml
@@ -29,6 +29,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -236,40 +237,88 @@
 
                     </FrameLayout>
 
-                    <FrameLayout
-                        android:id="@+id/flUploadVideo"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/small_rounded_stroke_gray_bg"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         >
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:clickable="false"
-                            android:longClickable="false"
-                            android:orientation="vertical"
+                        <FrameLayout
+                            android:id="@+id/flUploadVideo"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/small_rounded_stroke_gray_bg"
                             >
-                            <ImageView
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:src="@drawable/ic_add"
-                                app:tint="@color/gray4"
-                                />
-                            <TextView
+                            <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="11sp"
-                                android:textColor="@color/gray4"
-                                android:text="@string/upload_video"
-                                tools:ignore="SmallSp"
-                                android:layout_marginTop="5dp"
-                                />
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:clickable="false"
+                                android:longClickable="false"
+                                android:orientation="vertical"
+                                >
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:src="@drawable/ic_add"
+                                    app:tint="@color/gray4"
+                                    />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="11sp"
+                                    android:textColor="@color/gray4"
+                                    android:text="@string/upload_video"
+                                    tools:ignore="SmallSp"
+                                    android:layout_marginTop="5dp"
+                                    />
 
-                        </LinearLayout>
-                    </FrameLayout>
+                            </LinearLayout>
+                        </FrameLayout>
+
+                        <androidx.legacy.widget.Space
+                            android:layout_width="10dp"
+                            android:layout_height="0dp"/>
+
+                        <FrameLayout
+                            android:id="@+id/flDeleteVideo"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/small_rounded_stroke_gray_bg"
+                            android:visibility="invisible"
+                            >
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:clickable="false"
+                                android:longClickable="false"
+                                android:orientation="vertical"
+                                >
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:src="@drawable/ic_close"
+                                    app:tint="@color/red2"
+                                    />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="11sp"
+                                    android:textColor="@color/red2"
+                                    android:text="@string/delete_video"
+                                    tools:ignore="SmallSp"
+                                    android:layout_marginTop="5dp"
+                                    />
+
+                            </LinearLayout>
+                        </FrameLayout>
+
+                    </LinearLayout>
+
                     <LinearLayout
                         android:id="@+id/llAdditionViews"
                         android:layout_width="match_parent"
@@ -408,22 +457,24 @@
                     </LinearLayout>
 
 
-                    <androidx.cardview.widget.CardView
+                    <fragment
+                        android:id="@+id/map"
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
-                        app:cardBackgroundColor="@color/white"
-                        app:cardElevation="0dp"
-                        app:cardCornerRadius="8dp"
-                        >
-                        <fragment
-                            android:id="@+id/map"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:name="com.fardiat.activities_fragments.activity_signup.FragmentMapTouchListener"
-                            android:layout_marginTop="10dp"
-                            />
-
-                    </androidx.cardview.widget.CardView>
+                        android:name="com.fardiat.activities_fragments.activity_signup.FragmentMapTouchListener"
+                        android:layout_marginTop="10dp"
+                        />
+                    <CheckBox
+                        android:id="@+id/checkbox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:buttonTint="@color/colorPrimary"
+                        android:textSize="15sp"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:text="@string/accept_swear"
+                        />
 
                     <Button
                         android:layout_width="match_parent"
