--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/splash"
-            android:scaleType="centerCrop"
-            />
+   <FrameLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:background="@color/white"
+       >
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+       <ImageView
+           android:layout_width="300dp"
+           android:layout_height="300dp"
+           android:layout_gravity="center"
+           android:src="@drawable/logo"
+           android:scaleType="centerCrop"
+           />
+   </FrameLayout>
 </layout>
