--- a/app/src/main/res/layout/main_category_row.xml
+++ b/app/src/main/res/layout/main_category_row.xml
@@ -33,7 +33,7 @@
             android:text="@{model.title}"
             android:textColor="@color/gray4"
             android:textSize="12sp"
-            android:singleLine="true"
+            android:lines="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
