--- a/app/src/main/res/layout/activity_map_search.xml
+++ b/app/src/main/res/layout/activity_map_search.xml
@@ -47,6 +47,7 @@
                             android:src="@color/primary_trans" />
 
                         <ImageView
+                            android:id="@+id/imageBack"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:background="@drawable/circle_gray"
